fixed styles(color) which use on Select, fixed that The cart item quantity cannot be less than, fixed color and opacity produc out of stock, fixed that Some images are distorted

--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -1,6 +1,7 @@
 $color-primary: #5ece7b;
 $color-grey: #e5e5e5;
 $color-black: #1d1f22;
-$color-light-grey: rgba(57, 55, 72, 0.22);
+$color-light-grey: #eeeeee;
+$color-light-grey-transparent: rgba(57, 55, 72, 0.22);
 $color-grey-transparent: #8d8f9a;
 $color-white: #ffffff;
